recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:34: error: expected class or object definition
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^Tree:48: error: expected start of definition
	override def run() {
                 ^Tree:52: error: Unmatched closing brace '}' ignored here
}
^